--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A lightweight review gate made with jQuery to capture user reviews that are not 5-star quality. This helps businesses collect both negative and positive feedback to better enhance their customer service experience.",
   "main": "js/review-gate.jquery.js",
   "scripts": {
+    "build": "node build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/davidkim10/jquery-review-gate/issues"
   },
-  "homepage": "https://github.com/davidkim10/jquery-review-gate#readme"
+  "homepage": "https://github.com/davidkim10/jquery-review-gate#readme",
+  "type": "commonjs",
+  "devDependencies": {
+    "esbuild": "^0.25.0",
+    "esbuild-plugin-copy": "^2.1.1"
+  }
 }
